[gd_scene load_steps=8 format=3 uid="uid://1bdhkugipg3u"]

[ext_resource type="Script" path="res://Scenes/ui/RewardCard.gd" id="1_cmy5p"]
[ext_resource type="Texture2D" uid="uid://b66myg4i0q2fu" path="res://Sprites/cards/Block.png" id="1_i4d54"]
[ext_resource type="FontFile" uid="uid://35ubclsxhjgd" path="res://Fonts/lunchds.ttf" id="2_4hypf"]

[sub_resource type="LabelSettings" id="LabelSettings_odvfi"]
font = ExtResource("2_4hypf")
font_size = 32
outline_size = 2
outline_color = Color(0.207843, 0.207843, 0.25098, 1)

[sub_resource type="LabelSettings" id="LabelSettings_bq8sb"]
font = ExtResource("2_4hypf")
font_size = 32
outline_size = 2
outline_color = Color(0.207843, 0.207843, 0.25098, 1)

[sub_resource type="LabelSettings" id="LabelSettings_wn108"]
font = ExtResource("2_4hypf")
outline_size = 2
outline_color = Color(0.207843, 0.207843, 0.25098, 1)

[sub_resource type="LabelSettings" id="LabelSettings_y5ur5"]
font = ExtResource("2_4hypf")
outline_size = 2
outline_color = Color(0.207843, 0.207843, 0.25098, 1)

[node name="RewardCard" type="Control"]
custom_minimum_size = Vector2(255, 512)
layout_mode = 3
anchor_right = 0.133
anchor_bottom = 0.474
offset_right = -0.360001
offset_bottom = 0.0799561
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cmy5p")

[node name="Card" type="Sprite2D" parent="."]
position = Vector2(128, 256)
scale = Vector2(4, 4)
texture = ExtResource("1_i4d54")

[node name="ManaLabel" type="Label" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 218.0
offset_top = 280.0
offset_right = 236.0
offset_bottom = 312.0
text = "3"
label_settings = SubResource("LabelSettings_odvfi")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TypeLabel" type="Label" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 18.0
offset_top = 280.0
offset_right = 36.0
offset_bottom = 312.0
text = "R"
label_settings = SubResource("LabelSettings_bq8sb")
horizontal_alignment = 1
vertical_alignment = 1

[node name="NameLabel" type="Label" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 66.0
offset_top = 288.0
offset_right = 186.0
offset_bottom = 336.0
text = "Shield Bash"
label_settings = SubResource("LabelSettings_wn108")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="DescriptionLabel" type="Label" parent="."]
texture_filter = 1
layout_mode = 0
offset_top = 336.0
offset_right = 248.0
offset_bottom = 504.0
text = "Block 5 damage"
label_settings = SubResource("LabelSettings_y5ur5")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
justification_flags = 131

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = -232.0
offset_right = -22.0
offset_bottom = 319.0

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
